--- a/ch1-2/ch1-2.md
+++ b/ch1-2/ch1-2.md
@@ -2,6 +2,17 @@
   - Done in [9.md](9.md)
   - References: http://community.schemewiki.org/?sicp-ex-1.9  
 - 1.10
-  - Done in 10.txt
+  - Done in [10.txt](10.txt)
   - Checked and corrected
   - References: http://community.schemewiki.org/?sicp-ex-1.10 & https://codology.net/post/sicp-solution-exercise-1-10/ 
+- 1.11
+  - Done in [11.rkt](11.rkt)
+  - Checked with test cases
+  - (f1 110) does not finish
+- 1.12
+  - Done in [12.rkt](12.rkt)
+  - Checked with test cases
+  - Further testing?
+- 1.13
+  - Done in [13.md](13.md)
+  - Not checked yet
