make readable on github

--- a/ch1-2/13.md
+++ b/ch1-2/13.md
@@ -14,7 +14,8 @@ $= Fib(k) + Fib(k-1)$
 $= \frac {\varphi^k - \psi^k} {\sqrt 5} + \frac {\varphi^{k-1} - \psi^{k-1}} {\sqrt 5}$  
 $= \frac {\varphi^k (\frac {\varphi + 1} \varphi) - \psi^k (\frac {\psi + 1} \psi)} {\sqrt 5}$  
 
-Since $\varphi^2 = \varphi + 1$ and $\psi^2 = \psi + 1$,  
+Since $\varphi^2 = {\varphi + 1}$,   
+$\psi^2 = \psi + 1$,  
 
 $Fib(k + 1) = \frac {\varphi^{k+1} - \psi^{k+1}} {\sqrt 5}$
 
