minor fixes and updates

--- a/ch1-2/13.md
+++ b/ch1-2/13.md
@@ -1,3 +1,4 @@
+# My Solution (Incomplete)
 ## Proposition
 For any $n \in \mathbb{N}$, $Fib(n) = \frac {\varphi^n - \psi^n} {\sqrt 5}$.  
 
@@ -22,3 +23,7 @@ $Fib(k + 1) = \frac {\varphi^{k+1} - \psi^{k+1}} {\sqrt 5}$
 ---
 #### References
 [Induction](https://en.wikipedia.org/wiki/Mathematical_induction)
+
+---
+#### Complete Solution 
+https://codology.net/post/sicp-solution-exercise-1-13/
