--- a/ch1-2/ch1-2.md
+++ b/ch1-2/ch1-2.md
@@ -14,5 +14,7 @@
   - Checked with test cases
   - Further testing?
 - 1.13
-  - Done in [13.md](13.md)
-  - Not checked yet
+  - Done in [13.md](13.md) (incomplete)
+  - [Complete solution](https://codology.net/post/sicp-solution-exercise-1-13/)
+- 1.14 
+  - Done in [14.png](14.png) and [14.md](14.md)
