--- a/ch1-2/13.md
+++ b/ch1-2/13.md
@@ -25,5 +25,5 @@ $Fib(k + 1) = \frac {\varphi^{k+1} - \psi^{k+1}} {\sqrt 5}$
 [Induction](https://en.wikipedia.org/wiki/Mathematical_induction)
 
 ---
-#### Complete Solution 
-https://codology.net/post/sicp-solution-exercise-1-13/
+#### Link to a complete solution  
+https://codology.net/post/sicp-solution-exercise-1-13/  
