--- a/ch1-2/14.md
+++ b/ch1-2/14.md
@@ -1,2 +1,9 @@
-space: $\Theta(n)$
-steps: $\Theta(2^n)$
+space: $\Theta(n)$  
+<del>
+steps: $\Theta(2^n)$ 
+</del>
+
+[Link to a complete solution](https://codology.net/post/sicp-solution-exercise-1-14)  
+Notes
+- $T(n, 5) = \Theta(n^5)$
+- Each new kind of coin adds a new dimension and branches with one less kind of coin spring from it? 
