--- a/ch1-2/ch1-2.md
+++ b/ch1-2/ch1-2.md
@@ -15,6 +15,10 @@
   - Further testing?
 - 1.13
   - Done in [13.md](13.md) (incomplete)
-  - [Complete solution](https://codology.net/post/sicp-solution-exercise-1-13/)
+  - [Link to a complete solution](https://codology.net/post/sicp-solution-exercise-1-13/)
 - 1.14 
   - Done in [14.png](14.png) and [14.md](14.md)
+  - [Link to a complete solution](https://codology.net/post/sicp-solution-exercise-1-14/)
+  - Expanding sigma notation?
+- 1.15 
+  - NEED TO CORRECT
